# stable-delusion

./: .bandit  .env.example  .flake8  .gitignore  .gitlab-ci.yml  .pylintrc  API_DEMO.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  README.md  openapi.json  pyproject.toml
doc/: API_DEMO.md  ARCHITECTURE.md  Development.md  VERSIONING.md
metadata/: metadata_000e3a67_20250926_153226.json  metadata_02e024a5_20250926_152340.json  metadata_0c118be6_20250926_155956.json  metadata_2212c8cf_20250926_152833.json  metadata_22cb86e3_20250926_114359.json  metadata_25d4990d_20250926_160604.json  metadata_28e0a5c3_20250926_161924.json  metadata_2c1cc89c_20250926_154201.json  metadata_2f8cc981_20250926_152341.json  metadata_364d01ef_20250926_152833.json  metadata_396fb653_20250926_153226.json  metadata_40e72df4_20250926_160604.json  metadata_4a0935ce_20250926_150745.json  metadata_4e48327b_20250926_161842.json  metadata_512791ac_20250926_150332.json  metadata_52917c98_20250926_161925.json  metadata_52dae848_20250926_155956.json  metadata_5474e6c5_20250926_152417.json  metadata_5f36445d_20250926_152340.json  metadata_611b4813_20250926_114359.json  metadata_61fb7600_20250926_120150.json  metadata_669cf377_20250926_153226.json  metadata_66dd3b62_20250926_152416.json  metadata_6717753c_20250926_152730.json  metadata_6b67af0b_20250926_150525.json  metadata_6cc05e86_20250926_154201.json  metadata_74c20a75_20250926_150525.json  metadata_845df87c_20250926_150332.json  metadata_8e3df7f3_20250926_152730.json  metadata_a25ebc38_20250926_120150.json  metadata_aa81c9a8_20250926_150745.json  (+14 more)
(+95 files in other folders)
