[tool.poetry]
name = "nano_api"
version = "0.1.0"
description = ""
authors = ["Lene Preuss <lene.preuss@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^11.3.0"
google-genai = "^1.38.0"
flask = "^3.1.2"
google-cloud-aiplatform = "^1.115.0"
boto3 = "^1.40.39"
botocore = "^1.40.39"


[tool.poetry.group.test.dependencies]
freezegun = "^1.5.5"
requests-mock = "^1.12.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
bandit = "^1.8.6"
mypy = "^1.18.2"
types-requests = "^2.32.4.20250913"
boto3-stubs = {extras = ["s3"], version = "^1.40.39"}
pytest = "^8.4.2"
pylint = "^3.3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
